@@ -1,5 +1,7 @@
 Version 0.81
 ---------
+* Report PID and errors of commands executed on remote system.
+* Update README
 
 Version 0.80
 ---------
